Modiefied example and update build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ version '1.0'
 
 application {
     applicationName = 'graveborn'
-    mainClass = 'com.mygame.Main'
+    mainClass = 'com.mygame.Graveborn'
     // Mac OS with LWJGL 3 needs to be started with this JVM argument
     if (System.getProperty("os.name").toLowerCase().contains("mac")) {
         applicationDefaultJvmArgs = ['-XstartOnFirstThread']
