--- a/.editorconfig
+++ b/.editorconfig
@@ -6,5 +6,9 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.java]
+indent_style = space
+indent_size = 4
+
 [*.txt]
 indent_style = tab
